--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-Edit redditronrc and run ./redditron
-
-I'm working on removing the python-twitter dependency.
+Personal irc bot for the #srs channel.
